tests/compile_errors/function-param-mutable-default-value.buzz
// Default parameters must be constant values.
fun hey(data: mut [int] = mut []) {}
